2011-02-06  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/RouterThread.h: Fix warning.

	* include/dmcs/OutputNotification.h: Add parent_session_id.

	* src/network/JoinThread.cpp: Filter with parent_session_id.

	* src/solver/RelSatSolver.cpp: Send NULL pointer with
	parent_session_id.

	* include/network/OutputThread.h: Filter output models with parent_session_id.
	* src/network/OutputThread.cpp: Likewise.

	* include/network/Handler.h: Keep parent_session_id around.
	* include/network/Handler.tcc: Likewise.

	* include/dmcs/SessionNotification.h: Add operator<<

2011-02-06  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dmcsc.cpp: Run io_service in its own thread in streaming mode.

	* testsuite/Makefile.am (testQueryPlan_LDADD): Add liblog.a.

2011-02-05  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/network/JoinThread.cpp: Get new session id from SAT.

	* include/dmcs/SessionNotification.h: Add type.

2011-02-05  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/testCombination.cpp: Fix or disable testcases.
	* testsuite/testInterfaceRelSat.cpp: Likewise.
	* testsuite/testJoinThread.cpp: Likewise.
	* testsuite/testMessagingGateway.cpp: Likewise.

	* include/network/MessagingGateway.h: Add session id.
	* include/network/ConcurrentMessageDispatcher.h: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/network/ConcurrentMessageQueueFactory.cpp: Likewise.
	* src/network/ConcurrentMessageDispatcher.cpp: Likewise.
	* include/network/NeighborThread.h: Likewise.

	* examples/run-opt.sh: Add run support.
	* examples/run-streaming.sh: Likewise.

	* testsuite/testTranslation.cpp: Fix testcase.

	* include/loopformula/CNFLocalLoopFormulaBuilder.h: Merged Luca's loopformula fix.
	* include/loopformula/IMPLocalLoopFormulaBuilder.h: Likewise.
	* include/loopformula/LocalLoopFormulaBuilder.h: Likewise.
	* include/loopformula/LoopFormulaDirector.h: Likewise.